hard-gists/1715202/run.log
=== Docker Run Log for 1715202 ===
Started at: Mi 29. Okt 12:24:47 CET 2025

[2025-10-29 12:24:47] START: Running container for 1715202
[2025-10-29 12:24:47] SUCCESS: Container c5498e72c3131cce2fccf78cd06fd9ca7ee1f406698ae7f09afcfe386b0a0201 started for 1715202
=== Container logs for 1715202 ===
  File "/snippet.py", line 103
    raise template.TemplateSyntaxError, m
                                      ^
SyntaxError: invalid syntax
=== End of logs for 1715202 ===
[2025-10-29 12:24:49] INFO: Container c5498e72c3131cce2fccf78cd06fd9ca7ee1f406698ae7f09afcfe386b0a0201 has stopped
